gen/JavaliParser.java
// Generated from C:/Users/diego/Desktop/Javali/Javali.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JavaliParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, COMENTARIO=2, LINHA_COMENTARIO=3, DIGITO_LITERAL=4, REAL_LITERAL=5, 
		BOLEANA_LITERAL=6, CADEIA_LITERAL=7, INT=8, REAL=9, CADEIA=10, LISTA_UNIFORME=11, 
		LISTA_DIVERSA=12, BOLEANA=13, SOMA=14, SUBTRACAO=15, DIVISAO=16, MULTIPLICACAO=17, 
		IGUAL=18, IGUALDADE=19, DIFERENTE=20, MENOR_IGUAL=21, MAIOR_IGUAL=22, 
		E_LOGICO=23, OU_LOGICO=24, NEGACAO_LOGICA=25, ABRE_CHAVE=26, FECHA_CHAVE=27, 
		ABRE_COLCHETE=28, FECHA_COLCHETE=29, ABRE_PARENTESE=30, FECHA_PARENTESE=31, 
		PONTO_E_VIRGULA=32, ASPAS_DUPLAS=33, DOIS_PONTOS=34, PONTO=35, VIRGULA=36, 
		IDENTIFICADOR=37, SE=38, SENAO=39, ENTAO=40;
	public static final int
		RULE_programa = 0, RULE_estrutura = 1, RULE_seEstrutura = 2, RULE_tipoPrimitivo = 3, 
		RULE_inteiroDeclaracao = 4, RULE_realDeclaracao = 5, RULE_cadeiaDeclaracao = 6, 
		RULE_listaDeclaracao = 7, RULE_matrizDeclaracao = 8, RULE_boleanaDeclaracao = 9, 
		RULE_condicaoBoleana = 10, RULE_matrizExpressao = 11, RULE_matrizEstrutura = 12, 
		RULE_lista = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "estrutura", "seEstrutura", "tipoPrimitivo", "inteiroDeclaracao", 
			"realDeclaracao", "cadeiaDeclaracao", "listaDeclaracao", "matrizDeclaracao", 
			"boleanaDeclaracao", "condicaoBoleana", "matrizExpressao", "matrizEstrutura", 
			"lista"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "'inteiro'", "'real'", 
			"'cadeia'", "'lista'", "'matriz'", "'boleana'", "'+'", "'-'", "'/'", 
			"'*'", "'='", "'=='", "'!='", "'<='", "'>='", "'and'", "'or'", "'not'", 
			"'{'", "'}'", "'['", "']'", "'('", "')'", "';'", "'\"'", "':'", "'.'", 
			"','", null, "'se'", "'senao'", "'entao'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "COMENTARIO", "LINHA_COMENTARIO", "DIGITO_LITERAL", "REAL_LITERAL", 
			"BOLEANA_LITERAL", "CADEIA_LITERAL", "INT", "REAL", "CADEIA", "LISTA_UNIFORME", 
			"LISTA_DIVERSA", "BOLEANA", "SOMA", "SUBTRACAO", "DIVISAO", "MULTIPLICACAO", 
			"IGUAL", "IGUALDADE", "DIFERENTE", "MENOR_IGUAL", "MAIOR_IGUAL", "E_LOGICO", 
			"OU_LOGICO", "NEGACAO_LOGICA", "ABRE_CHAVE", "FECHA_CHAVE", "ABRE_COLCHETE", 
			"FECHA_COLCHETE", "ABRE_PARENTESE", "FECHA_PARENTESE", "PONTO_E_VIRGULA", 
			"ASPAS_DUPLAS", "DOIS_PONTOS", "PONTO", "VIRGULA", "IDENTIFICADOR", "SE", 
			"SENAO", "ENTAO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Javali.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JavaliParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public List<EstruturaContext> estrutura() {
			return getRuleContexts(EstruturaContext.class);
		}
		public EstruturaContext estrutura(int i) {
			return getRuleContext(EstruturaContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaliListener ) ((JavaliListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaliListener ) ((JavaliListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaliVisitor ) return ((JavaliVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 274945031944L) != 0)) {
				{
				{
				setState(28);
				estrutura();
				}
				}
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EstruturaContext extends ParserRuleContext {
		public TerminalNode ABRE_CHAVE() { return getToken(JavaliParser.ABRE_CHAVE, 0); }
		public TerminalNode FECHA_CHAVE() { return getToken(JavaliParser.FECHA_CHAVE, 0); }
		public List<EstruturaContext> estrutura() {
			return getRuleContexts(EstruturaContext.class);
		}
		public EstruturaContext estrutura(int i) {
			return getRuleContext(EstruturaContext.class,i);
		}
		public TipoPrimitivoContext tipoPrimitivo() {
			return getRuleContext(TipoPrimitivoContext.class,0);
		}
		public SeEstruturaContext seEstrutura() {
			return getRuleContext(SeEstruturaContext.class,0);
		}
		public TerminalNode LINHA_COMENTARIO() { return getToken(JavaliParser.LINHA_COMENTARIO, 0); }
		public EstruturaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estrutura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaliListener ) ((JavaliListener)listener).enterEstrutura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaliListener ) ((JavaliListener)listener).exitEstrutura(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaliVisitor ) return ((JavaliVisitor<? extends T>)visitor).visitEstrutura(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EstruturaContext estrutura() throws RecognitionException {
		EstruturaContext _localctx = new EstruturaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_estrutura);
		int _la;
		try {
			setState(45);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ABRE_CHAVE:
				enterOuterAlt(_localctx, 1);
				{
				setState(34);
				match(ABRE_CHAVE);
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 274945031944L) != 0)) {
					{
					{
					setState(35);
					estrutura();
					}
					}
					setState(40);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(41);
				match(FECHA_CHAVE);
				}
				break;
			case INT:
			case REAL:
			case CADEIA:
			case LISTA_UNIFORME:
			case LISTA_DIVERSA:
			case BOLEANA:
				enterOuterAlt(_localctx, 2);
				{
				setState(42);
				tipoPrimitivo();
				}
				break;
			case SE:
				enterOuterAlt(_localctx, 3);
				{
				setState(43);
				seEstrutura();
				}
				break;
			case LINHA_COMENTARIO:
				enterOuterAlt(_localctx, 4);
				{
				setState(44);
				match(LINHA_COMENTARIO);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeEstruturaContext extends ParserRuleContext {
		public TerminalNode SE() { return getToken(JavaliParser.SE, 0); }
		public TerminalNode ABRE_PARENTESE() { return getToken(JavaliParser.ABRE_PARENTESE, 0); }
		public CondicaoBoleanaContext condicaoBoleana() {
			return getRuleContext(CondicaoBoleanaContext.class,0);
		}
		public TerminalNode FECHA_PARENTESE() { return getToken(JavaliParser.FECHA_PARENTESE, 0); }
		public TerminalNode ENTAO() { return getToken(JavaliParser.ENTAO, 0); }
		public List<TerminalNode> ABRE_CHAVE() { return getTokens(JavaliParser.ABRE_CHAVE); }
		public TerminalNode ABRE_CHAVE(int i) {
			return getToken(JavaliParser.ABRE_CHAVE, i);
		}
		public List<EstruturaContext> estrutura() {
			return getRuleContexts(EstruturaContext.class);
		}
		public EstruturaContext estrutura(int i) {
			return getRuleContext(EstruturaContext.class,i);
		}
		public List<TerminalNode> FECHA_CHAVE() { return getTokens(JavaliParser.FECHA_CHAVE); }
		public TerminalNode FECHA_CHAVE(int i) {
			return getToken(JavaliParser.FECHA_CHAVE, i);
		}
		public TerminalNode SENAO() { return getToken(JavaliParser.SENAO, 0); }
		public SeEstruturaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seEstrutura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaliListener ) ((JavaliListener)listener).enterSeEstrutura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaliListener ) ((JavaliListener)listener).exitSeEstrutura(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaliVisitor ) return ((JavaliVisitor<? extends T>)visitor).visitSeEstrutura(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeEstruturaContext seEstrutura() throws RecognitionException {
		SeEstruturaContext _localctx = new SeEstruturaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_seEstrutura);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(SE);
			setState(48);
			match(ABRE_PARENTESE);
			setState(49);
			condicaoBoleana();
			setState(50);
			match(FECHA_PARENTESE);
			setState(51);
			match(ENTAO);
			setState(52);
			match(ABRE_CHAVE);
			setState(53);
			estrutura();
			setState(54);
			match(FECHA_CHAVE);
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SENAO) {
				{
				setState(55);
				match(SENAO);
				setState(56);
				match(ABRE_CHAVE);
				setState(57);
				estrutura();
				setState(58);
				match(FECHA_CHAVE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoPrimitivoContext extends ParserRuleContext {
		public InteiroDeclaracaoContext inteiroDeclaracao() {
			return getRuleContext(InteiroDeclaracaoContext.class,0);
		}
		public TerminalNode PONTO_E_VIRGULA() { return getToken(JavaliParser.PONTO_E_VIRGULA, 0); }
		public RealDeclaracaoContext realDeclaracao() {
			return getRuleContext(RealDeclaracaoContext.class,0);
		}
		public CadeiaDeclaracaoContext cadeiaDeclaracao() {
			return getRuleContext(CadeiaDeclaracaoContext.class,0);
		}
		public ListaDeclaracaoContext listaDeclaracao() {
			return getRuleContext(ListaDeclaracaoContext.class,0);
		}
		public MatrizDeclaracaoContext matrizDeclaracao() {
			return getRuleContext(MatrizDeclaracaoContext.class,0);
		}
		public BoleanaDeclaracaoContext boleanaDeclaracao() {
			return getRuleContext(BoleanaDeclaracaoContext.class,0);
		}
		public TipoPrimitivoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoPrimitivo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaliListener ) ((JavaliListener)listener).enterTipoPrimitivo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaliListener ) ((JavaliListener)listener).exitTipoPrimitivo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaliVisitor ) return ((JavaliVisitor<? extends T>)visitor).visitTipoPrimitivo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoPrimitivoContext tipoPrimitivo() throws RecognitionException {
		TipoPrimitivoContext _localctx = new TipoPrimitivoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tipoPrimitivo);
		try {
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				inteiroDeclaracao();
				setState(63);
				match(PONTO_E_VIRGULA);
				}
				break;
			case REAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				realDeclaracao();
				setState(66);
				match(PONTO_E_VIRGULA);
				}
				break;
			case CADEIA:
				enterOuterAlt(_localctx, 3);
				{
				setState(68);
				cadeiaDeclaracao();
				}
				break;
			case LISTA_UNIFORME:
				enterOuterAlt(_localctx, 4);
				{
				setState(69);
				listaDeclaracao();
				}
				break;
			case LISTA_DIVERSA:
				enterOuterAlt(_localctx, 5);
				{
				setState(70);
				matrizDeclaracao();
				}
				break;
			case BOLEANA:
				enterOuterAlt(_localctx, 6);
				{
				setState(71);
				boleanaDeclaracao();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InteiroDeclaracaoContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(JavaliParser.INT, 0); }
		public List<TerminalNode> IDENTIFICADOR() { return getTokens(JavaliParser.IDENTIFICADOR); }
		public TerminalNode IDENTIFICADOR(int i) {
			return getToken(JavaliParser.IDENTIFICADOR, i);
		}
		public TerminalNode IGUAL() { return getToken(JavaliParser.IGUAL, 0); }
		public TerminalNode DIGITO_LITERAL() { return getToken(JavaliParser.DIGITO_LITERAL, 0); }
		public InteiroDeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inteiroDeclaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaliListener ) ((JavaliListener)listener).enterInteiroDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaliListener ) ((JavaliListener)listener).exitInteiroDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaliVisitor ) return ((JavaliVisitor<? extends T>)visitor).visitInteiroDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InteiroDeclaracaoContext inteiroDeclaracao() throws RecognitionException {
		InteiroDeclaracaoContext _localctx = new InteiroDeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_inteiroDeclaracao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(INT);
			setState(75);
			match(IDENTIFICADOR);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IGUAL) {
				{
				setState(76);
				match(IGUAL);
				setState(77);
				_la = _input.LA(1);
				if ( !(_la==DIGITO_LITERAL || _la==IDENTIFICADOR) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RealDeclaracaoContext extends ParserRuleContext {
		public TerminalNode REAL() { return getToken(JavaliParser.REAL, 0); }
		public List<TerminalNode> IDENTIFICADOR() { return getTokens(JavaliParser.IDENTIFICADOR); }
		public TerminalNode IDENTIFICADOR(int i) {
			return getToken(JavaliParser.IDENTIFICADOR, i);
		}
		public TerminalNode IGUAL() { return getToken(JavaliParser.IGUAL, 0); }
		public TerminalNode REAL_LITERAL() { return getToken(JavaliParser.REAL_LITERAL, 0); }
		public RealDeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_realDeclaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaliListener ) ((JavaliListener)listener).enterRealDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaliListener ) ((JavaliListener)listener).exitRealDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaliVisitor ) return ((JavaliVisitor<? extends T>)visitor).visitRealDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RealDeclaracaoContext realDeclaracao() throws RecognitionException {
		RealDeclaracaoContext _localctx = new RealDeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_realDeclaracao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(REAL);
			setState(81);
			match(IDENTIFICADOR);
			setState(86);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(82);
				match(IGUAL);
				setState(83);
				match(IDENTIFICADOR);
				}
				break;
			case 2:
				{
				setState(84);
				match(IGUAL);
				setState(85);
				match(REAL_LITERAL);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CadeiaDeclaracaoContext extends ParserRuleContext {
		public TerminalNode CADEIA() { return getToken(JavaliParser.CADEIA, 0); }
		public List<TerminalNode> IDENTIFICADOR() { return getTokens(JavaliParser.IDENTIFICADOR); }
		public TerminalNode IDENTIFICADOR(int i) {
			return getToken(JavaliParser.IDENTIFICADOR, i);
		}
		public TerminalNode PONTO_E_VIRGULA() { return getToken(JavaliParser.PONTO_E_VIRGULA, 0); }
		public TerminalNode IGUAL() { return getToken(JavaliParser.IGUAL, 0); }
		public TerminalNode CADEIA_LITERAL() { return getToken(JavaliParser.CADEIA_LITERAL, 0); }
		public CadeiaDeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cadeiaDeclaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaliListener ) ((JavaliListener)listener).enterCadeiaDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaliListener ) ((JavaliListener)listener).exitCadeiaDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaliVisitor ) return ((JavaliVisitor<? extends T>)visitor).visitCadeiaDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CadeiaDeclaracaoContext cadeiaDeclaracao() throws RecognitionException {
		CadeiaDeclaracaoContext _localctx = new CadeiaDeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cadeiaDeclaracao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(CADEIA);
			setState(89);
			match(IDENTIFICADOR);
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(90);
				match(IGUAL);
				setState(91);
				match(IDENTIFICADOR);
				}
				break;
			case 2:
				{
				setState(92);
				match(IGUAL);
				setState(93);
				match(CADEIA_LITERAL);
				}
				break;
			}
			setState(96);
			match(PONTO_E_VIRGULA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaDeclaracaoContext extends ParserRuleContext {
		public TerminalNode LISTA_UNIFORME() { return getToken(JavaliParser.LISTA_UNIFORME, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(JavaliParser.IDENTIFICADOR, 0); }
		public TerminalNode PONTO_E_VIRGULA() { return getToken(JavaliParser.PONTO_E_VIRGULA, 0); }
		public TerminalNode IGUAL() { return getToken(JavaliParser.IGUAL, 0); }
		public ListaContext lista() {
			return getRuleContext(ListaContext.class,0);
		}
		public ListaDeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaDeclaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaliListener ) ((JavaliListener)listener).enterListaDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaliListener ) ((JavaliListener)listener).exitListaDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaliVisitor ) return ((JavaliVisitor<? extends T>)visitor).visitListaDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaDeclaracaoContext listaDeclaracao() throws RecognitionException {
		ListaDeclaracaoContext _localctx = new ListaDeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_listaDeclaracao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(LISTA_UNIFORME);
			setState(99);
			match(IDENTIFICADOR);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IGUAL) {
				{
				setState(100);
				match(IGUAL);
				setState(101);
				lista();
				}
			}

			setState(104);
			match(PONTO_E_VIRGULA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatrizDeclaracaoContext extends ParserRuleContext {
		public TerminalNode LISTA_DIVERSA() { return getToken(JavaliParser.LISTA_DIVERSA, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(JavaliParser.IDENTIFICADOR, 0); }
		public TerminalNode PONTO_E_VIRGULA() { return getToken(JavaliParser.PONTO_E_VIRGULA, 0); }
		public TerminalNode IGUAL() { return getToken(JavaliParser.IGUAL, 0); }
		public MatrizExpressaoContext matrizExpressao() {
			return getRuleContext(MatrizExpressaoContext.class,0);
		}
		public MatrizDeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matrizDeclaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaliListener ) ((JavaliListener)listener).enterMatrizDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaliListener ) ((JavaliListener)listener).exitMatrizDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaliVisitor ) return ((JavaliVisitor<? extends T>)visitor).visitMatrizDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}
